--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -264,7 +264,8 @@ header nav[aria-expanded='true'] .nav-tools li {
 
 header .header-topbar {
   height: 25px;
-  background-color: black;
+  /* background-color: black; */
+  background-color: #e20074;
   color: var(--text-color-light);
   display: flex;
   justify-content: space-between;
