--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -115,6 +115,8 @@ header nav .nav-sections {
   display: none;
   background-color: var(--overlay-color);
   flex: 1 1 auto;
+  /* RUG */
+  color: #e20074;
 }
 
 header nav .nav-sections ul  {
