--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,6 +96,8 @@ h1 {
   margin-top: 27px;
   margin-bottom: 13.5px;
   font-size: var(--heading-font-size-xxl);
+ /* RUG */
+ margin-left: 27px;
 }
 
 body.activity h1::after {
@@ -129,6 +131,8 @@ body p {
   margin: 0 0 13.5px;
   font-size: 18px;
   line-height: 2.5;
+ /* RUG */
+ margin-left: 27px;
 }
 
 a:any-link {
