--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -25,7 +25,8 @@ main .hero .hero-body {
 
 
 main .hero picture {
-    position: absolute;
+    /* position: absolute; */
+    position: relative;
     top: 0;
     left: 0;
     bottom: 0;
