--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -25,8 +25,7 @@ main .hero .hero-body {
 
 
 main .hero picture {
-    /* position: absolute; */
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
