--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -267,7 +267,7 @@ header nav[aria-expanded='true'] .nav-tools li {
 header .header-topbar {
   height: 25px;
   /* background-color: black; */
-  background-color: rgb(47,89,79);
+  background-color: #e20074;
   color: var(--text-color-light);
   display: flex;
   justify-content: space-between;
